jumbotron css (pre)

--- a/_includes/sekce3.html
+++ b/_includes/sekce3.html
@@ -1,18 +1,20 @@
 <section class="sekce3">
-  <h2>Spojení</h2>
-  <ul>
-    <li>
-      <p>Tenhle projekt spadá pod skupinu</p>
-      <a href="http://arkun.xyz">Arkun.xyz</a>
-    </li>
-    <li>
-      <p>Odkaz na facebook skupinu</p>
-      <a href="http://facebook.com/$#@">facebook.com/$#@</a>
-    </li>
-    <li>
-      <p>Kontakt na admina</p>
-      <a href="http://twitter.com/styvekdrtic">@StyvekDrtic</a>
-      <a href="mailto:jiristepanek@hotmail.com">jiristepanek@hotmail.com</a>
-    </li>
-  </ul>
+  <div class="innerWrap">
+    <h2>Spojení</h2>
+    <ul>
+      <li>
+        <p>Tenhle projekt spadá pod skupinu</p>
+        <a href="http://arkun.xyz">Arkun.xyz</a>
+      </li>
+      <li>
+        <p>Odkaz na facebook skupinu</p>
+        <a href="http://facebook.com/$#@">facebook.com/$#@</a>
+      </li>
+      <li>
+        <p>Kontakt na admina</p>
+        <a href="http://twitter.com/styvekdrtic">@StyvekDrtic</a>
+        <a href="mailto:jiristepanek@hotmail.com">jiristepanek@hotmail.com</a>
+      </li>
+    </ul>
+  </div>
 </section>
