--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,3 +7,7 @@
 @import "normalize";
 @import "fontAwesome";
 @import "zaklad";
+@import "jumbotron";
+@import "sekce1";
+@import "sekce2";
+@import "sekce3";
