--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,25 +1,29 @@
 <section class="jumbotron">
-  <header>
-    <ul>
-      <li class="logoHeader">
-        <img src="assets/img/logo.png" alt="Logo">
-      </li>
-      <li>
-        <a href="#">O projektu</a>
-      </li>
-      <li>
-        <a href="#">Koho hledáme</a>
-      </li>
-      <li>
-        <a href="#">Spojení</a>
-      </li>
-    </ul>
-    <a href="#" class="pridejSe">Přidej se k nám</a>
-  </header>
-  <div class="jumbotronText">
-    <h4>(je to zdarma, neboj)</h4>
-    <h1>Ukaž co umíš a spoj se s ostatními.</h1>
-    <div class="cara"></div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <div class="innerWrap">
+    <header>
+      <ul>
+        <li class="logoHeader">
+          <a href="#">
+            <img src="assets/img/logo.png" alt="Logo">
+          </a>
+        </li>
+        <li>
+          <a href="#">O projektu</a>
+        </li>
+        <li>
+          <a href="#">Koho hledáme</a>
+        </li>
+        <li>
+          <a href="#">Spojení</a>
+        </li>
+      </ul>
+      <a href="#" class="pridejSe">Přidej se k nám</a>
+    </header>
+    <div class="jumbotronText">
+      <h4>(je to zdarma, neboj)</h4>
+      <h1>Ukaž co umíš a spoj se s ostatními.</h1>
+      <div class="cara"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
   </div>
 </section>
