sekce1 css (pre)

--- a/_sass/_zaklad.scss
+++ b/_sass/_zaklad.scss
@@ -39,11 +39,12 @@ body {
 }
 
 section {
-  min-height: 100vh;
+
 }
 
 .innerWrap {
   max-width: 1040px;
   display: block;
   margin: 0 auto;
+  padding: 0 50px;
 }
