--- a/_sass/_jumbotron.scss
+++ b/_sass/_jumbotron.scss
@@ -2,11 +2,13 @@
   background: #fff;
   background: url("../img/ilustrace.png");
   background-position: calc(100% + 0px) calc(100% + 10px);
-  background-size: 40%;
+  background-size: 600px;
   background-repeat: no-repeat;
   -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
+  z-index: 10;
+  min-height: 700px;
 
   header {
     padding-top: 40px;
@@ -51,7 +53,7 @@
   }
 
   .jumbotronText {
-    margin-top: 150px;
+    margin-top: 100px;
 
     h4 {
       font-size: 20px;
