sekce2 css (pre)

--- a/_includes/sekce2.html
+++ b/_includes/sekce2.html
@@ -1,4 +1,4 @@
-<section class="section2">
+<section class="sekce2">
   <div class="innerWrap">
     <div class="citat">
       <p>“Ahoj jak se máš, já mám rád kočky. Jsou fakt hebké”</p>
