sekce3 css (pre)

--- a/_includes/sekce3.html
+++ b/_includes/sekce3.html
@@ -4,16 +4,26 @@
     <ul>
       <li>
         <p>Tenhle projekt spadá pod skupinu</p>
-        <a href="http://arkun.xyz">Arkun.xyz</a>
+        <div>
+          <a href="http://arkun.xyz">Arkun.xyz</a>
+        </div>
       </li>
+      <div class="cara"></div>
       <li>
         <p>Odkaz na facebook skupinu</p>
-        <a href="http://facebook.com/$#@">facebook.com/$#@</a>
+        <div>
+          <a href="http://facebook.com/$#@">facebook.com/$#@</a>
+        </div>
       </li>
+      <div class="cara"></div>
       <li>
         <p>Kontakt na admina</p>
-        <a href="http://twitter.com/styvekdrtic">@StyvekDrtic</a>
-        <a href="mailto:jiristepanek@hotmail.com">jiristepanek@hotmail.com</a>
+        <div>
+          <a href="http://twitter.com/styvekdrtic">@StyvekDrtic</a>
+        </div>
+        <div class="mail">
+          <a href="mailto:jiristepanek@hotmail.com">jiristepanek@hotmail.com</a>
+        </div>
       </li>
     </ul>
   </div>
