--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -8,13 +8,13 @@
           </a>
         </li>
         <li>
-          <a href="#">O projektu</a>
+          <a href="#projekt">O projektu</a>
         </li>
         <li>
-          <a href="#">Koho hledáme</a>
+          <a href="#lidi">Koho hledáme?</a>
         </li>
         <li>
-          <a href="#">Spojení</a>
+          <a href="#spojeni">Spojení</a>
         </li>
       </ul>
       <a href="#" class="pridejSe">Přidej se k nám</a>
