--- a/_includes/sekce1.html
+++ b/_includes/sekce1.html
@@ -1,4 +1,4 @@
-<section class="sekce1">
+<section class="sekce1" id="projekt">
   <div class="innerWrap">
     <div class="levaCast">
       <h2>Co to vůbec je?</h2>
@@ -6,7 +6,17 @@
       <p>Motivation is the key to positivity in our lives. If we were not motivated enough, we would just not have the will in us to go about our daily lives. Its motivation that helps us get through the most mundane things – motivation for working harder, motivation to have a healthy relationship, motivation to earn more, motivation to have a happy family. And yet sometimes we find ourselves lacking in motivation; I think we have all had days when getting out of bed to get ready to go to work.</p>
     </div>
     <div class="pravaCast">
-      <div class="karta"></div>
+      <div class="karta">
+        <!--<div class="fb-page" data-href="https://www.facebook.com/BeUnique-379178405589582/" data-tabs="timeline" data-height="580" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/BeUnique-379178405589582/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/BeUnique-379178405589582/">BeUnique</a></blockquote></div>-->
+      </div>
+
+      <div class="karta karta2">
+        <!--<div class="fb-page" data-href="https://www.facebook.com/BeUnique-379178405589582/" data-tabs="timeline" data-width="280" data-height="350" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/BeUnique-379178405589582/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/BeUnique-379178405589582/">BeUnique</a></blockquote></div>-->
+      </div>
+
+      <div class="karta karta2 karta3">
+        <!--<div class="fb-page" data-href="https://www.facebook.com/BeUnique-379178405589582/" data-tabs="timeline" data-width="220" data-height="350" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/BeUnique-379178405589582/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/BeUnique-379178405589582/">BeUnique</a></blockquote></div>-->
+      </div>
     </div>
   </div>
 </section>
