--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,20 @@
   {% include head.html %}
 
   <body>
+    <!--
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/cs_CZ/sdk.js#xfbml=1&version=v2.10";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+-->
     {% include jumbotron.html %}
     {% include sekce1.html %}
     {% include sekce2.html %}
     {% include sekce3.html %}
+    {% include footer.html %}
   </body>
 </html>
