--- a/_sass/_sekce2.scss
+++ b/_sass/_sekce2.scss
@@ -30,6 +30,10 @@
       font-style: italic;
       margin: 0;
       width: 330px;
+
+      @media screen and (max-width: 750px) {
+        width: 100%;
+      }
     }
 
     .cara {
@@ -38,6 +42,7 @@
       width: 100px;
       margin-top: 15px;
       margin-bottom: 25px;
+      margin-left: auto;
     }
 
     span {
@@ -45,13 +50,24 @@
       font-size: 15px;
       color: #EEECFF;
     }
+
+    @media screen and (max-width: 750px) {
+      float: none;
+      display: block;
+      margin-top: 0;
+      width: 100%;
+      margin: 0 auto;
+      text-align: right;
+      padding-bottom: 40px;
+    }
   }
 
   .pravaCast {
     display: inline-block;
     width: calc(100% - 330px - 50px);
     max-width: 570px;
-    margin-top: 80px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 
     h2 {
       color: #EEECFF;
@@ -68,6 +84,15 @@
       letter-spacing: 0.5px;
       line-height: 25px;
       font-weight: 400;
+    }
+
+    @media screen and (max-width: 750px) {
+      float: none;
+      display: block;
+      width: 100%;
+      padding-bottom: 0;
+      margin-bottom: 50px;
+      padding-top: 40px;
     }
   }
 }
