--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -7,15 +7,17 @@
             <img src="assets/img/logo.png" alt="Logo">
           </a>
         </li>
-        <li>
-          <a href="#projekt">O projektu</a>
-        </li>
-        <li>
-          <a href="#lidi">Koho hledáme?</a>
-        </li>
-        <li>
-          <a href="#spojeni">Spojení</a>
-        </li>
+        <div class="menuPolozky">
+          <li>
+            <a href="#projekt">O projektu</a>
+          </li>
+          <li>
+            <a href="#lidi">Koho hledáme?</a>
+          </li>
+          <li>
+            <a href="#spojeni">Spojení</a>
+          </li>
+        </div>
       </ul>
       <a href="#" class="pridejSe">Přidej se k nám</a>
     </header>
