--- a/_sass/_sekce2.scss
+++ b/_sass/_sekce2.scss
@@ -9,6 +9,7 @@
   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
   position: relative;
   text-align: right;
+  margin-top: -1px;
 
   .innerWrap {
     position: relative;
@@ -42,7 +43,10 @@
       width: 100px;
       margin-top: 15px;
       margin-bottom: 25px;
-      margin-left: auto;
+
+      @media screen and (max-width: 750px) {
+        margin-left: auto;
+      }
     }
 
     span {
@@ -93,6 +97,10 @@
       padding-bottom: 0;
       margin-bottom: 50px;
       padding-top: 40px;
+    }
+
+    @media screen and (max-width: 550px) {
+      padding-top: 30px;
     }
   }
 }
