--- a/_sass/_sekce3.scss
+++ b/_sass/_sekce3.scss
@@ -9,6 +9,7 @@
   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
   position: relative;
   text-align: center;
+  margin-top: -1px;
 
   .innerWrap {
     position: relative;
@@ -22,6 +23,14 @@
     font-size: 32px;
     margin-bottom: 50px;
     padding-top: 50px;
+
+    @media screen and (max-width: 750px) {
+      padding-top: 40px;
+    }
+
+    @media screen and (max-width: 550px) {
+      padding-top: 40px;
+    }
   }
 
   ul {
@@ -72,5 +81,9 @@
         margin-top: -20px;
       }
     }
+  }
+
+  @media screen and (max-width: 750px) {
+    min-height: 660px;
   }
 }
