proste commit abych mohl upload

--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -25,7 +25,7 @@
       <h4>(je to zdarma, neboj)</h4>
       <h1>Ukaž co umíš a spoj se s ostatními.</h1>
       <div class="cara"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Baví tě grafika, psaní, programování, marketing, focení, střih nebo se třeba jenom začínáš všechny tyhle věci teprve učit. Přidej se do komunity “like-minded” lidí, získej zkušenosti, nové kontakty a možná si u toho i něco přivyděláš :)</p>
     </div>
   </div>
 </section>
