--- a/_includes/sekce1.html
+++ b/_includes/sekce1.html
@@ -2,8 +2,8 @@
   <div class="innerWrap">
     <div class="levaCast">
       <h2>Co to vůbec je?</h2>
-      <h3>Hispul tipo</h3>
-      <p>Motivation is the key to positivity in our lives. If we were not motivated enough, we would just not have the will in us to go about our daily lives. Its motivation that helps us get through the most mundane things – motivation for working harder, motivation to have a healthy relationship, motivation to earn more, motivation to have a happy family. And yet sometimes we find ourselves lacking in motivation; I think we have all had days when getting out of bed to get ready to go to work.</p>
+      <h3>Facebook skupina</h3>
+      <p>Být v kontaktu s lidmi s podobnými zájmy je obravdu důležité, o to víc když v danném oboru nemáš ještě tolik zkušeností / kontaktů. Potřebuješ sehnat lidi do projektu? Nevíš si s něčím rady? Chceš lidem ukázat co si vytvořil a dostat feedback?<br>Pracovat na svých projektech je sice super ale pracovat na nich s ostatními je mnohem lepší. Tato skupina je přesně o tom.</p>
     </div>
     <div class="pravaCast">
       <div class="karta">
