--- a/_includes/sekce2.html
+++ b/_includes/sekce2.html
@@ -6,7 +6,7 @@
       <p>Fation that helps us get through the most mundane things – motivation for working harder, motivation to have a healthy relations</p>
     </div>
     <div class="citat">
-      <p>“Ahoj jak se máš, já mám rád kočky. Jsou fakt hebké”</p>
+      <p>"Z instagram příspěvku prosně nic nevznikne - tady máte možnost vaše nápady někam dotáhnout”</p>
       <div class="cara"></div>
       <span>- Jiří Štěpánek, Tvůrce Arkun</span>
     </div>
